objects/sfal__Topic__c.object
<CustomObject>
    <description>The topic of discussion for an appointment. Topics can be general or specific, such as Academic or Degree Planning.</description>
    <fields>
        <fullName>sfal__Label__c</fullName>
        <description>The name of the appointment topic. This value is copied from Topic Name. To translate the picklist values, use the Translation Workbench.</description>
        <inlineHelpText>The name of the appointment topic. This value is copied from Topic Name. To translate the picklist values, use the Translation Workbench.</inlineHelpText>
        <label>Label</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfal__ParentTopic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the parent Topic record.</description>
        <inlineHelpText>A lookup to the parent Topic record.</inlineHelpText>
        <label>Parent Topic</label>
        <referenceTo>sfal__Topic__c</referenceTo>
        <relationshipLabel>Subtopics</relationshipLabel>
        <relationshipName>SubTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfal__SortOrder__c</fullName>
        <description>The Topic&apos;s display order within the picklist. For example, you can force a topic named Other to display last.</description>
        <inlineHelpText>The Topic&apos;s display order within the picklist. For example, you can force a topic named Other to display last.</inlineHelpText>
        <label>Sort Order</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Topic</label>
    <listViews>
        <fullName>sfal__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>